# ncx-infra-controller-core

./: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  STYLE_GUIDE.md  THIRD-PARTY-LICENSES
.github/workflows/: ci.yaml  stale-check.yml
bluefield/: Makefile.toml
bluefield/charts/carbide-otelcol/files/: otel_config.yaml
bluefield/charts/carbide-otelcol/templates/: daemonset.yaml
bluefield/misc/: forge-dpu-otel-agent.service
bluefield/misc/DEBIAN/: control  postinst
bluefield/misc/site-controller/: otel-agent.service
bluefield/misc/site-controller/DEBIAN/: control  postinst
bluefield/otel/: otel-agent  otel-agent-config.toml  otel_config.yaml  otelcol_builder_config_yaml.txt
bluefield/otel/puntstatsreceiver/: README.md  config.go  factory.go  go.mod  puntstatsreceiver.go  version.go
bluefield/otel/scripts/: otel_copy_certs.sh
bluefield/otel/site-controller/: otel_config.yaml  otelcol-wrapper
bluefield/otel/site-controller/otel-agent/: Dockerfile  otel-agent.sh  otel-agent.yaml.template
bluefield/otel/site-controller/scripts/: localhost_alias.sh  map_endpoints.sh  otel_post_install.sh
book/: README.md  book.toml
crates/admin-cli/src/: rpc.rs
crates/admin-cli/src/managed_switch/delete/: args.rs  cmd.rs
crates/admin-cli/src/managed_switch/show/: cmd.rs
crates/admin-cli/src/power_shelf/: tests.rs
crates/admin-cli/src/power_shelf/list/: args.rs  cmd.rs  mod.rs
crates/admin-cli/src/power_shelf/show/: cmd.rs  mod.rs
crates/admin-cli/src/site_explorer/get_report/: cmd.rs
crates/admin-cli/src/switch/: tests.rs
crates/admin-cli/src/switch/list/: args.rs  cmd.rs  mod.rs
crates/admin-cli/src/switch/show/: cmd.rs
crates/agent/src/: dhcp.rs  ethernet_virtualization.rs  nvue.rs
crates/agent/templates/: nvue_startup_fnn.conf
crates/agent/templates/tests/: nvue_startup_with_bridge.yaml.expected
crates/api-db/src/: expected_switch.rs  power_shelf.rs  rack_firmware.rs  sku.rs  switch.rs
crates/api-model/src/: lib.rs  rack_firmware.rs  sku.rs
crates/api-model/src/machine/: mod.rs
crates/api-model/src/power_shelf/: mod.rs
crates/api-model/src/site_explorer/: mod.rs
crates/api-model/src/switch/: mod.rs
crates/api-test-helper/src/: utils.rs  vault.rs
crates/api/src/: api.rs  dpf.rs  dpf_services.rs  lib.rs  setup.rs
crates/api/src/auth/: internal_rbac_rules.rs
crates/api/src/cfg/: README.md  file.rs
crates/api/src/cfg/test_data/: full_config.toml  site_config.toml
crates/api/src/handlers/: machine.rs  power_shelf.rs  rack_firmware.rs  switch.rs
crates/api/src/ib_fabric_monitor/: metrics.rs
crates/api/src/logging/: mod.rs
crates/api/src/machine_validation/: metrics.rs
crates/api/src/measured_boot/metrics_collector/: metrics.rs
crates/api/src/nvl_partition_monitor/: metrics.rs
crates/api/src/preingestion_manager/: metrics.rs
crates/api/src/site_explorer/: metrics.rs  mod.rs  redfish.rs
crates/api/src/state_controller/: metrics.rs
crates/api/src/state_controller/dpa_interface/: metrics.rs
crates/api/src/state_controller/machine/: handler.rs  metrics.rs
crates/api/src/state_controller/machine/handler/: dpf.rs
crates/api/src/state_controller/network_segment/: metrics.rs
crates/api/src/state_controller/spdm/: metrics.rs
crates/api/src/tests/: expected_switch.rs  machine_admin_force_delete.rs  mod.rs  power_shelf_find.rs  rack_firmware.rs  site_explorer.rs  switch_find.rs
crates/api/src/tests/common/api_fixtures/: dpu.rs  managed_host.rs  mod.rs
crates/api/src/tests/dpf/: duplicate_events.rs  happy_path.rs  mod.rs  reprovisioning.rs  stale_labels.rs  waiting_for_ready.rs
crates/api/src/web/: mod.rs  switch.rs
crates/api/templates/: expected_switch.html  explored_endpoint_detail.html  switch.html  switch_detail.html
crates/bmc-explorer/src/: chassis.rs  computer_system.rs  lib.rs  manager.rs
crates/bmc-explorer/src/hw/: lenovo_gb300.rs  mod.rs
crates/bmc-mock/src/: lib.rs  machine_info.rs
crates/bmc-mock/src/hw/: bluefield3.rs  dell_poweredge_r750.rs  lenovo_gb300_nvl.rs  liteon_power_shelf.rs  mod.rs  nic_intel_i210.rs  nvidia_dgx_h100.rs  nvidia_gb200.rs  nvidia_gb300.rs  nvidia_gbx00.rs  nvidia_switch_nd5200_ld.rs  wiwynn_gb200_nvl.rs
crates/bmc-mock/src/redfish/: chassis.rs  host_interface.rs  manager.rs  mod.rs  power_subsystem.rs  power_supply.rs
crates/dpf/src/: flavor.rs  lib.rs  sdk.rs  services.rs  types.rs
crates/dpf/src/test/: helpers.rs  sdk_initialization.rs  sdk_provisioning_flow.rs
crates/dpu-otel-agent/src/: command_line.rs  main_loop.rs
crates/health/benches/: collector_pipeline.rs  processor_pipeline.rs  sink_pipeline.rs
crates/health/src/: lib.rs  metrics.rs
crates/health/src/collectors/: firmware.rs  logs.rs  mod.rs  nmxt.rs  runtime.rs  sensors.rs
crates/health/src/collectors/nvue/rest/: collector.rs
crates/health/src/discovery/: spawn.rs
crates/health/src/processor/: health_report.rs  leak_events.rs  mod.rs
crates/health/src/sink/: composite.rs  health_override.rs  mod.rs  prometheus.rs  tracing.rs
crates/rpc/: build.rs
crates/rpc/proto/: forge.proto  site_explorer.proto
crates/secrets/src/: forge_vault.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  metrics.rs
deploy/: DNS.md
dev/docker/: Dockerfile.release-container-aarch64  Dockerfile.release-container-x86_64
docs/playbooks/: troubleshooting_noDpuLogsWarning_alerts.md
