#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
license-file = "LICENSE"
authors = ["NVIDIA Carbide Engineering <carbide-dev@exchange.nvidia.com>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
libredfish = { git = "https://github.com/NVIDIA/libredfish.git", tag = "v0.43.5" }
librms = { git = "https://github.com/NVIDIA/nv-rms-client.git", tag = "v0.0.5" }
ansi-to-html = "0.2.2"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26" }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

tonic = { version = "0.14", features = ["tls-ring"] }
strum = "0.26.3"
strum_macros = "0.26.4"

hyper = { version = "^1" }
hyper-rustls = { version = "^0.27" }
hyper-timeout = { version = "^0.5" }
hyper-util = { version = "^0.1" }

rustls = { version = "0.23.16", features = ["aws_lc_rs"] }
rustls-pki-types = "1.10.0"
sqlx = { version = "0.8.3" }
sqlx-core = { version = "0.8.3" }

opentelemetry = { version = "0.28.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.28.0", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["metrics"] }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry-semantic-conventions = "0.28.0"
# tracing-opentelemetry 0.29.0 seems to correspond to opentelemetry 0.28.0, confusingly enough.
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.29.0"

# NV-Redfish
nv-redfish = { version = "0.4.3", features = [
  "bmc-http",
  "std-redfish",
  "update-service",
  "resource-status",
] }

########
# MARK: - Pinned packages that we can't upgrade due to conflicts or just bugs
########

# pinning ipnetwork:
# Newer versions (0.21.x and later) don't seem to have working sqlx::Decode support. This will probably be fixed in a
# newer sqlx version.
ipnetwork = "0.20.0"

# pinning axum:
# Tonic does not support axum 0.8 or later. Until it does, pin axum to 0.7 and the related crates to the corresponding
# (working) versions.
axum = "0.8.4"
axum-extra = "0.10"                 # Pin this until we can update axum
axum-client-ip = "1.1.3"
axum-template = { version = "3.0" }

########
# MARK: - Versions common for the rest of the codebase
########

anyhow = "1.0"
arc-swap = "1.6"
askama = "0.12.1"
askama_escape = "0.10"
asn1-rs = "0.7.0"
async-ssh2-tokio = "0.12.0"
async-trait = "0.1.88"
axum-response-cache = "0.4"
axum-server = "0.7"
backon = "1.5.2"
base64 = "0.22.1"
blake3 = "1.4"
byteorder = "1.5.0"
bytes = "^1"
byte-unit = "5.1.6"
casbin = "2.0"
chrono = "0.4"
clap_complete = "4.5.58"
colored = "2.2.0"
color-eyre = "0.6.5"
const_format = "0.2.26"
containerd-client = "0.6"
criterion = "0.8"
crossterm = "0.28.1"
crypto-bigint = "0.7.0-rc.9"
csv = "1.3.1"
ctor = "0.4.2"
dashmap = "6.1.0"
data-encoding = "2.9.0"
derive_builder = "0.12.0"
dhcproto = "0.12.0"
diff = "0.1"
domain = "0.10.1"
duration-str = "0.17.0"
efivar = "2.0.0"
eyre = "0.6.12"
figment = "0.10.16"
flate2 = "1.0.30"
form_urlencoded = "1"
futures = { default-features = false, version = "0.3" }
futures-util = "0.3.31"
getopts = "0.2.21"
governor = "0.10.1"
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
heck = "0.5.0"
hex = "0.4.3"
hkdf = "0.12.4"
hickory-proto = "0.24.4"
hickory-resolver = "0.24.0"
hostname = "0.3"
http = "1.3.1"
http-body = "1.0"
http-body-util = "^0.1"
humantime = "2.1.0"
humantime-serde = "1.1"
indoc = "2.0.6"
ipnet = "2"
itertools = "0.14"
jemalloc_pprof = "0.8"
assert-json-diff = "2.0"
lazy_static = "1.5.0"
libc = "0.2.176"
libfuzzer-sys = "0.4"
libudev = "0.3"
local-ip-address = "0.6.3"
log = "0.4.19"
lru = "0.16.3"
mac_address = "1.1"
moka = { version = "0.12", features = ["future"] }
md5 = "0.7"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mime = "0.3"
mockall = "0.13.0"
names = { default-features = false, version = "0.14.0" }
netlink-packet-route = "=0.19"
nix = "0.30.1"
nonempty = "0.11.0"
nonzero_ext = "0.3.0"
notify = "8.2.0"
num-bigint-dig = "0.8.4"
num_cpus = "1.16.0"
oauth2 = { default-features = false, version = "5" }
octseq = "0.5.1"
oid-registry = "0.8"
once_cell = "1.19"
pin-project-lite = "0.2"
pkcs1 = "0.7.5"
prettyplease = "0.2.30"
prettytable-rs = { default-features = false, version = "0.10" }
procfs = "0.17"
proc-macro2 = { default-features = false, version = "1.0.92" }
prometheus = "0.13.4"
prost = "0.14.1"
prost-build = "0.14"
prost-types = "0.14.1"
pwhash = "1.0.0"
quick-xml = "0.31"
quote = { default-features = false, version = "1.0" }
rand = "0.9"
ratatui = "0.29.0"
rcgen = "0.13.1"
regex = "1.11.2"
reqwest = { default-features = false, version = "0.12.23" }
resolv-conf = "0.7.0"
ringbuf = "0.4.8"
rsa = "0.9.9"
rtnetlink = "0.14"
rumqttc = "0.24"
russh = "0.54.6"
rustc-hash = "2.1.1"
rustls-pemfile = "2.2.0"
serde = "1"
serde_json = "1.0"
serde_regex = "1.1.0"
serde_with = "3.12.0"
serde_yaml = "0.9"
serial_test = "3"
sha2 = "0.10.9"
similar = "2.7.0"
size = "0.5.0"
smbios-lib = "0.9.2"
socket2 = "0.6.1"
sqlx-macros-core = "0.8.2"
strip-ansi-escapes = "0.2.1"
surge-ping = "0.8.1"
syn = { default-features = false, version = "2.0" }
tar = "0.4.40"
temp-dir = "0.1.14"
tempfile = "3.8"
tera = "1.20"
test-cdylib = "1.1.0"
thiserror = "2.0.14"
tikv-jemallocator = "0.6.1"
time = "0.3.36"
tokio-socks = "0.5.1"
tokio-test = "0.4"
toml = "0.8.23"
toml_edit = "0.23.7"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.12"
tower = "0.5"
tower-http = "0.6"
tower-layer = "0.3"
tower-service = "0.3.2"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
trust-dns-resolver = "0.23.2"
trust-dns-server = "0.23.2"
tryhard = "0.5.1"
tss-esapi = "7.5.0"
typed-builder = "0.20.0"
uname = "0.1"
url = "2"
uuid = "1.17.0"
uzers = "0.12.1"
vaultrs = "0.7"
version-compare = "0.2.1"
wait-timeout = "0.2.1"
walkdir = "2.5.0"
x509-parser = "0.17.0"
urlencoding = "2.1"
zip = "0.6"
serde_derive = "1"
fmt = "0.1.0"
jsonwebtoken = "10.2.0"
mockito = "1.7.0"
kube = { version = "3.0.0", default-features = false }
k8s-openapi = "0.27.0"
tower-test = "0.4"

[profile.release]
debug = true            # Enable debuginfo
debug-assertions = true # Add some extra assurance during development
overflow-checks = true  # Add some extra assurance during development

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
unused_async = "warn"
