#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-utils"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# TODO: rename to carbide_utils in source
[lib]
name = "utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sqlx = ["carbide-network/sqlx", "dep:sqlx"]

[dependencies]
byte-unit = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
prettytable-rs = { default-features = false, features = [
  "csv",
], workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
ipnetwork = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
], optional = true }
tonic = { workspace = true }
humantime = { workspace = true }
opentelemetry = { workspace = true }

# [local-dependencies]
config-version = { path = "../config-version" }
carbide-health-report = { path = "../health-report" }
carbide-network = { path = "../network" }
carbide-uuid = { path = "../uuid" }
carbide-rpc = { path = "../rpc" }

[lints]
workspace = true
